--- a/contact.html
+++ b/contact.html
@@ -185,9 +185,9 @@
                     <div class="socmed">
                         <table>
                             <tr>
-                                <td><a href="#" class="fa fa-facebook"></a></td>
-                                <td><a href="#" class="fa fa-twitter"></a></td>
-                                <td><a href="#" class="fa fa-instagram"></a></td>
+                                <td><a href="https://www.instagram.com/ftry.c/" target = "blank" class="fa fa-facebook"></a></td>
+                                <td><a href="https://twitter.com/ftry_c" target = "blank" class="fa fa-twitter"></a></td>
+                                <td><a href="https://www.facebook.com/mohd.fitri.52012" target = "blank" class="fa fa-instagram"></a></td>
                             </tr>
                         </table>
                     </div>
